-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.8
-
None
-
59133b16c (dev), 091d732b1 (6.8)
I'm seeing test failures in tst_QDnsLookup on my local Mac, that I'm not entirely sure how to explain. My guess is that they are related to my DNS server (dnsmasq running on my router) not matching the expectations that tst_QDnsLookup from running in a CI environment.
Any ideas where to look thiago manordheim ? If these are indeed environment differences, and not real test failures, we should probably skip the tests instead of failing?
❯ ./build_dir/tst_qdnslookup ********* Start testing of tst_QDnsLookup ********* Config: Using QtTest library 6.9.0, Qt 6.9.0 (arm64-little_endian-lp64 shared (dynamic) debug build; by Apple LLVM 15.0.0 (clang-1500.3.9.4)), macos 14.5 PASS : tst_QDnsLookup::initTestCase() PASS : tst_QDnsLookup::lookupLocalhost() PASS : tst_QDnsLookup::lookupRoot() PASS : tst_QDnsLookup::lookupNxDomain(a) FAIL! : tst_QDnsLookup::lookupNxDomain(aaaa) Compared values are not the same Actual (lookup->error()) : NoError Expected (QDnsLookup::NotFoundError): NotFoundError Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(446)] FAIL! : tst_QDnsLookup::lookupNxDomain(any) Compared values are not the same Actual (lookup->error()) : NoError Expected (QDnsLookup::NotFoundError): NotFoundError Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(446)] FAIL! : tst_QDnsLookup::lookupNxDomain(mx) Compared values are not the same Actual (lookup->error()) : NoError Expected (QDnsLookup::NotFoundError): NotFoundError Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(446)] SKIP : tst_QDnsLookup::lookupNxDomain(ns) Server refused or was unable to answer query; invalid.invalid type NS: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] FAIL! : tst_QDnsLookup::lookupNxDomain(ptr) Compared values are not the same Actual (lookup->error()) : NoError Expected (QDnsLookup::NotFoundError): NotFoundError Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(446)] FAIL! : tst_QDnsLookup::lookupNxDomain(srv) Compared values are not the same Actual (lookup->error()) : NoError Expected (QDnsLookup::NotFoundError): NotFoundError Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(446)] FAIL! : tst_QDnsLookup::lookupNxDomain(txt) Compared values are not the same Actual (lookup->error()) : NoError Expected (QDnsLookup::NotFoundError): NotFoundError Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(446)] FAIL! : tst_QDnsLookup::lookup(a-single) Compared values are not the same Actual (result) : "" Expected (expected): "A 192.0.2.1" Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(547)] FAIL! : tst_QDnsLookup::lookup(a-multi) Compared values are not the same Actual (result) : "" Expected (expected): "A 192.0.2.1;A 192.0.2.2;A 192.0.2.3" Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(547)] PASS : tst_QDnsLookup::lookup(aaaa-single) PASS : tst_QDnsLookup::lookup(aaaa-multi) SKIP : tst_QDnsLookup::lookup(any-a-single) Server refused or was unable to answer query; a-single type ANY: Server failure Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] SKIP : tst_QDnsLookup::lookup(any-a-plus-aaaa) Server refused or was unable to answer query; a-plus-aaaa type ANY: Server failure Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] SKIP : tst_QDnsLookup::lookup(any-multi) Server refused or was unable to answer query; multi type ANY: Server failure Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] PASS : tst_QDnsLookup::lookup(mx-single) PASS : tst_QDnsLookup::lookup(mx-single-cname) PASS : tst_QDnsLookup::lookup(mx-multi) PASS : tst_QDnsLookup::lookup(mx-multi-sameprio) PASS : tst_QDnsLookup::lookup(ns-single) SKIP : tst_QDnsLookup::lookup(ns-multi) Server refused or was unable to answer query; ns-multi type NS: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] PASS : tst_QDnsLookup::lookup(ptr-1.1.1.1) PASS : tst_QDnsLookup::lookup(ptr-8.8.8.8) PASS : tst_QDnsLookup::lookup(ptr-2001:4860:4860::8888) SKIP : tst_QDnsLookup::lookup(ptr-2606:4700:4700::1111) Server refused or was unable to answer query; 1.1.1.1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.7.4.0.0.7.4.6.0.6.2.ip6.arpa. type PTR: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] PASS : tst_QDnsLookup::lookup(srv-single) PASS : tst_QDnsLookup::lookup(srv-prio) PASS : tst_QDnsLookup::lookup(srv-weighted) PASS : tst_QDnsLookup::lookup(srv-multi) PASS : tst_QDnsLookup::lookup(tlsa) PASS : tst_QDnsLookup::lookup(txt-single) PASS : tst_QDnsLookup::lookup(txt-multi-onerr) PASS : tst_QDnsLookup::lookup(txt-multi-multirr) FAIL! : tst_QDnsLookup::lookupIdn(a-single) Compared values are not the same Actual (result) : "" Expected (expected): "A 192.0.2.1" Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(547)] FAIL! : tst_QDnsLookup::lookupIdn(a-multi) Compared values are not the same Actual (result) : "" Expected (expected): "A 192.0.2.1;A 192.0.2.2;A 192.0.2.3" Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(547)] PASS : tst_QDnsLookup::lookupIdn(aaaa-single) PASS : tst_QDnsLookup::lookupIdn(aaaa-multi) SKIP : tst_QDnsLookup::lookupIdn(any-a-single) Server refused or was unable to answer query; a-single type ANY: Server failure Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] SKIP : tst_QDnsLookup::lookupIdn(any-a-plus-aaaa) Server refused or was unable to answer query; a-plus-aaaa type ANY: Server failure Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] SKIP : tst_QDnsLookup::lookupIdn(any-multi) Server refused or was unable to answer query; multi type ANY: Server failure Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] PASS : tst_QDnsLookup::lookupIdn(mx-single) SKIP : tst_QDnsLookup::lookupIdn(mx-single-cname) Server refused or was unable to answer query; mx-single-cname type MX: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] PASS : tst_QDnsLookup::lookupIdn(mx-multi) PASS : tst_QDnsLookup::lookupIdn(mx-multi-sameprio) PASS : tst_QDnsLookup::lookupIdn(ns-single) PASS : tst_QDnsLookup::lookupIdn(ns-multi) PASS : tst_QDnsLookup::lookupIdn(ptr-1.1.1.1) PASS : tst_QDnsLookup::lookupIdn(ptr-8.8.8.8) SKIP : tst_QDnsLookup::lookupIdn(ptr-2001:4860:4860::8888) Server refused or was unable to answer query; 8.8.8.8.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.6.8.4.0.6.8.4.1.0.0.2.ip6.arpa. type PTR: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] PASS : tst_QDnsLookup::lookupIdn(ptr-2606:4700:4700::1111) PASS : tst_QDnsLookup::lookupIdn(srv-single) PASS : tst_QDnsLookup::lookupIdn(srv-prio) PASS : tst_QDnsLookup::lookupIdn(srv-weighted) PASS : tst_QDnsLookup::lookupIdn(srv-multi) PASS : tst_QDnsLookup::lookupIdn(tlsa) PASS : tst_QDnsLookup::lookupIdn(txt-single) PASS : tst_QDnsLookup::lookupIdn(txt-multi-onerr) SKIP : tst_QDnsLookup::lookupIdn(txt-multi-multirr) Server refused or was unable to answer query; txt-multi-multirr type TXT: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(310)] FAIL! : tst_QDnsLookup::lookupReuse() '!lookup.hostAddressRecords().isEmpty()' returned FALSE. () Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(577)] PASS : tst_QDnsLookup::lookupAbortRetry() PASS : tst_QDnsLookup::setNameserverLoopback() QDEBUG : tst_QDnsLookup::setNameserver() QHostAddress("2001:4860:4860::8888") discarded: "Host unreachable" QDEBUG : tst_QDnsLookup::setNameserver() QHostAddress("2606:4700:4700::1111") discarded: "Host unreachable" QDEBUG : tst_QDnsLookup::setNameserver(192.168.1.1) Lookup took 10 ms FAIL! : tst_QDnsLookup::setNameserver(192.168.1.1) Compared values are not the same Actual (result) : "" Expected ("A 192.0.2.1"): A 192.0.2.1 Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/network/kernel/qdnslookup/tst_qdnslookup.cpp(710)] QDEBUG : tst_QDnsLookup::setNameserver(8.8.8.8) Lookup took 59 ms PASS : tst_QDnsLookup::setNameserver(8.8.8.8) QDEBUG : tst_QDnsLookup::setNameserver(1.1.1.1) Lookup took 18 ms PASS : tst_QDnsLookup::setNameserver(1.1.1.1) QDEBUG : tst_QDnsLookup::dnsOverTls() QHostAddress("2001:4860:4860::8888") discarded: "Host unreachable" QDEBUG : tst_QDnsLookup::dnsOverTls() QHostAddress("2606:4700:4700::1111") discarded: "Host unreachable" QDEBUG : tst_QDnsLookup::dnsOverTls(8.8.8.8) Lookup took 225 ms PASS : tst_QDnsLookup::dnsOverTls(8.8.8.8) QDEBUG : tst_QDnsLookup::dnsOverTls(1.1.1.1) Lookup took 167 ms PASS : tst_QDnsLookup::dnsOverTls(1.1.1.1) PASS : tst_QDnsLookup::bindingsAndProperties() PASS : tst_QDnsLookup::automatedBindings() PASS : tst_QDnsLookup::cleanupTestCase() Totals: 48 passed, 12 failed, 12 skipped, 0 blacklisted, 90555ms ********* Finished testing of tst_QDnsLookup *********